--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,3 +142,16 @@ progress {
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
+/* Media Queries */
+@media screen and ( max-width: 880px ) {
+    .wrapper {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+@media screen and ( max-width: 540px ) {
+    .storage-bar {
+        max-width: 23em;
+    }
+}
