540px MQ - background updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,12 @@ progress {
 }
 
 @media screen and ( max-width: 540px ) {
+    body {
+        background: url(/assets/img/bg-mobile.png);
+    }
+
     .storage-bar {
         max-width: 23em;
     }
+
 }
