MQ background fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,8 @@ progress {
 
 @media screen and ( max-width: 540px ) {
     body {
-        background: url(/assets/img/bg-mobile.png);
+        background: url(/assets/img/bg-mobile.png) no-repeat;
+        background-size: cover;
     }
 
     .storage-bar {
