--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ main {
 /* Storage Bar */
 .storage-bar {
     min-width: 35em;
-    padding: 1em;
+    padding: 1em 3em;
     color: var(--Pale-Blue);
     font-weight: 400;
 }
@@ -102,6 +102,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .storage-left {
@@ -110,14 +111,14 @@ main {
     justify-content: center;
     align-items: center;
     background: white;
-    border-radius: 0.5em;
+    border-radius: 0.5em 0.5em 0.5em 0.5em;
     padding: 1em;
 }
 
 .storage-left h1{
     color: #222;
     font-size: 3em;
-    margin: 0 0.5em 0 0;
+    margin: 0 0.3em 0 0;
 }
 
 .storage-left p {
@@ -129,6 +130,7 @@ main {
 /* Progress Bar */
 progress {
     border-radius: 1em;
+    min-width: 29em;
 }
 
 /* Min - max */
