fixed media 880px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,11 @@ progress {
         flex-direction: column;
         align-items: flex-start;
     }
+
+    .storage-left {
+        top: 9em;
+        right: 8em;
+    }
 }
 
 @media screen and ( max-width: 540px ) {
