--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,7 @@ progress {
     .storage-bar {
         max-width: 23em;
         min-width: 0;
+        padding: 0 3em;
     }
 
     progress {
@@ -178,6 +179,11 @@ progress {
 
     .storage-text {
         display: inline-block;
+        max-height: fit-content;
+    }
+
+    .storage-text p {
+        margin: 1em 0 0 0;
     }
 
     .storage-left {
